<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diamonds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logo_description">A Rad Logo</string>
    <string name="login_button_text">Login!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="create_game_text">Create Game</string>
    <string name="join_game_text">Join Game</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="lobby_chat_button_text">Chat!</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="game_points_label">Points</string>
    <string name="game_score_label">Score</string>
    <string name="game_chat_hint">Type to chat!</string>
    <string name="game_chat_button_label">Chat!</string>
    <string name="game_bid_text">You bid %s.</string>
    <string name="game_no_bid_text">No bid.</string>
    <string name="game_card_back_text">Empty</string>
    <string name="menu_help_text">Help</string>
    <string name="menu_about_text">About</string>
    <string name="tutorial">Diamonds is a simple card game based upon saying how many points you will take (your bid) and then getting a score based upon the number of points you got.\nThe round starts by somebody leading the Two of Clubs and then each person in a clockwise fashion will play a card. The card they play must be within suit (if possible). Once all four players have played a card the highest card in-suit will win the trick unless Trump (Diamonds) was played in which the highest Diamond will win.\n\nDiamonds cannot be lead unless somebody has trumped using Diamonds or it is the only suit in your hand. Diamonds may be freely played after a trick has been started if you do not have the suit that was lead.\n\nPoints are distributed amongst cards\n\n* Each non-face card is worth 0 points\n* Each Diamond card is worth +1 points\n* Each Jack is worth +1 points\n* Each Queen is worth +2 points\n* Each King is worth +3 points\n* Each Ace is worth +4 points\n\nSo for example, if you were to take a trick with the Ace of Diamonds you would gain 5 points from your Ace. If the pot also contained the two of clubs, the three of clubs, and the four of clubs you would receive only 5 points as the other cards were all worth 0.\n\nFor another example, if you were to take a trick with the Jack of Spades and the pot contained a Queen of Hearts, Two of Clubs, and the Three of Clubs you would receive 1 point for you Jack and 2 points for the Queen so in total that trick earned you 3 points.\n\nAt the end of a Round (this occurs when everybody is out of cards) your score would be determined by how apart your bid and points were. If you bid 20 and only took 10 points you would score would increase by 5 because you were 10 away from your bid and the maximum number of points you can get a round is 15 so 15 minus 10 is 5.\n\nThe game ends when somebody has either 100 or more points or -100 or fewer points.</string>
    <string name="about">Diamonds the app was created by\n* Jeffrey Carter\n* Kyle Dooley\n\nDiamonds the game was created by the Carter Family.\n\nThe card icons used are from https://code.google.com/p/vector-playing-cards/.</string>
    <string name="create_private_game">Create Private Game</string>
    <string name="create_public_game">Create Public Game</string>
    <string name="join_private_game">Join Private Game</string>
    <string name="lobby_kick_player_text">X</string>
    <string name="lobby_add_bot">+</string>

</resources>